todo updates, uvwasi_rt.h header

--- a/wasm2c/examples/hello-wasi/TODO
+++ b/wasm2c/examples/hello-wasi/TODO
@@ -1,9 +1,20 @@
-*-add instance pointer to wasi functions
--add defintion of wasi struct
-uvwasi + pointer to linear memory.
+Feature completetion:
 
--change memory access to use wasi_struct memory pointer
--change wasi calls to use wasi_struct wasi_state pointer
+Eliminate direct use of global_instance and uvwasi
+    *-add instance pointer to wasi functions
+    -add defintion of wasi struct
+    uvwasi + pointer to linear memory.
+
+    -change memory access to use wasi_struct memory pointer
+    -change wasi calls to use wasi_struct wasi_state pointer
 
 -address any XXX lines
 -make sure linear memory accesses are bounded checked
+
+Clean up:
+-Relocate files to appropriate locations
+-move onto wabt branch
+
+
+
+
